# example_ascii_counter

./: CMakeLists.txt  README.md
.github/workflows/: build-test.yml
src/: ascii_counter.c  ascii_counter.h  main.c
tests/: CMakeLists.txt  test_error_sequence.c  test_fuzz_sequence.c  test_good_sequence.c
